--- a/index.html
+++ b/index.html
@@ -1,49 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Interactive rating component</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="styles.css" />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <title>Frontend Mentor | Interactive rating component</title>
+  </head>
+  <body>
+    <!-- Rating state start -->
 
-  <!-- Rating state start -->
+    <main>
+      <img src="./images/icon-star.svg" alt="star icon" />
 
-  How did we do?
+      <div class="heading">
+        <h1>How did we do?</h1>
 
-  Please let us know how we did with your support request. All feedback is appreciated 
-  to help us improve our offering!
+        <p>
+          Please let us know how we did with your support request. All feedback
+          is appreciated to help us improve our offering! 1 2 3 4 5 Submit
+        </p>
+      </div>
 
-  1 2 3 4 5
+      <form action="#">
+        <div>
+          <input type="radio" name="rating" id="r-1" />
+          <input type="radio" name="rating" id="r-2" />
+          <input type="radio" name="rating" id="r-3" />
+          <input type="radio" name="rating" id="r-4" />
+          <input type="radio" name="rating" id="r-5" />
+        </div>
 
-  Submit
+        <button>Submit</button>
+      </form>
+    </main>
 
-  <!-- Rating state end -->
+    <!-- Rating state end -->
 
-  <!-- Thank you state start -->
+    <!-- Thank you state start -->
 
-  You selected <!-- Add rating here --> out of 5
+    <div style="display: none">
+      You selected
+      <!-- Add rating here -->
+      out of 5 Thank you! We appreciate you taking the time to give a rating. If
+      you ever need more support, don’t hesitate to get in touch!
+    </div>
 
-  Thank you!
+    <!-- Thank you state end -->
 
-  We appreciate you taking the time to give a rating. If you ever need more support, 
-  don’t hesitate to get in touch!
-
-  <!-- Thank you state end -->
-
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <footer class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="https://github.com/isaiasg09">Isaias</a>.
+    </footer>
+  </body>
 </html>
