--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     <!-- Rating state start -->
 
     <main>
-      <img src="./images/icon-star.svg" alt="star icon" />
+      <img src="./images/icon-star.svg" alt="star icon" class="star-icon" />
 
       <div class="heading">
         <h1>How did we do?</h1>
 
         <p>
           Please let us know how we did with your support request. All feedback
-          is appreciated to help us improve our offering! 1 2 3 4 5 Submit
+          is appreciated to help us improve our offering!
         </p>
       </div>
 
